@@ -1,0 +1,24 @@
+# This is the src/RelLib level Makefile for Gramps
+# We could use GNU make's ':=' syntax for nice wildcard use,
+# but that is not necessarily portable.
+# If not using GNU make, then list all .py files individually
+
+pkgdatadir = $(datadir)/@PACKAGE@/utils
+
+pkgdata_PYTHON = \
+	__init__.py \
+	dbutils.py
+
+
+pkgpyexecdir = @pkgpyexecdir@/utils
+pkgpythondir = @pkgpythondir@/utils
+
+
+# Clean up all the byte-compiled files
+MOSTLYCLEANFILES = *pyc *pyo
+
+GRAMPS_PY_MODPATH = "../"
+
+pycheck: 
+	(export PYTHONPATH=$(GRAMPS_PY_MODPATH); \
+	pychecker $(pkgdata_PYTHON));
